section2 html structure

--- a/index.html
+++ b/index.html
@@ -32,9 +32,27 @@
                 </div>
                 <div class="section1__container2">
                     <p class="section1__paragraph--input">Search</p>
-                    <img src="/assets/icons/search-outline.svg">
+                    <img src="/assets/icons/search-solid.svg">
                     <input type="text" class="section1__input">
                 </div>
+            </div>
+        </section>
+        <section class="section2 row">
+            <h2 class="section2__h2">Topics</h2>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <a href="">Benefits</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <a href="">Benefits</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <a href="">Benefits</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
             </div>
         </section>
     </main>
