--- a/index.html
+++ b/index.html
@@ -41,18 +41,131 @@
             <h2 class="section2__h2">Topics</h2>
             <div class="section2__container--cards col-4">
                 <hr>
-                <a href="">Benefits</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
             </div>
             <div class="section2__container--cards col-4">
                 <hr>
-                <a href="">Benefits</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
             </div>
             <div class="section2__container--cards col-4">
                 <hr>
-                <a href="">Benefits</a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+            </div>
+            <div class="section2__container--cards col-4">
+                <hr>
+                <div class="d-flex justify-content-between">
+                    <a href="">Births, deaths, marriages </a>
+                    <img src="/assets/icons/arrow-right-short.svg" alt="">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
             </div>
         </section>
     </main>
