--- a/index.html
+++ b/index.html
@@ -168,6 +168,67 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
             </div>
         </section>
+        <div class="separation-lines container">
+            <hr class="line-1">
+            <hr class="line-2">
+        </div>
+        <section class="section3 row">
+            <div class="col-8 first-section-container">
+                <h3>Government activity</h3>
+                <p>Find out what the government is doing</p>
+                <div class="row">
+                    <div class="section2__container--cards col-6 ">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>
+                    <div class="section2__container--cards col-6 hola">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>
+                    <div class="section2__container--cards col-6">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>   <div class="section2__container--cards col-6">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>   <div class="section2__container--cards col-6">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>   <div class="section2__container--cards col-6">
+                        <hr>
+                        <div class="d-flex justify-content-between">
+                            <a href="">Births, deaths, marriages </a>
+                            <img src="/assets/icons/arrow-right-short.svg" alt="">
+                        </div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam corrupti dolorum blanditiis impedit iste exercitationem!</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <h3>Departments and organisations</h3>
+
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
